k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-backend
  namespace: nexabank
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5001
      targetPort: 5000
