k8s/ollama-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: nexabank
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: 11434
